--- a/src/main/resources/assets/l2tabs/lang/zh_cn.json
+++ b/src/main/resources/assets/l2tabs/lang/zh_cn.json
@@ -3,9 +3,10 @@
   "menu.tabs.attribute": "数值",
   "menu.tabs.curios": "饰品",
   "menu.tabs.attribute.detail": "按Shift显示细节",
-  "menu.tabs.attribute.base": "基础数值: %s",
+  "menu.tabs.attribute.base": "实体基础数值: %s",
   "menu.tabs.attribute.add": "加法乘区: %s",
   "menu.tabs.attribute.mult_base": "乘法乘区: %s",
   "menu.tabs.attribute.mult_all": "独立乘法乘区: %s",
-  "menu.tabs.attribute.format": "(%s%s)x(1%s)x%s=%s"
+  "menu.tabs.attribute.format": "(%s%s)x(1%s)x%s=%s",
+  "menu.tabs.attribute.intrinsic": "数值基值: %s"
 }
